Fixed letter spacing

--- a/footer.css
+++ b/footer.css
@@ -11,18 +11,19 @@
     background-color: #255f5f;
 }
 
-.footer-image-column{
-     width: 100%;
-    height: 523px;
+.footer-image-column {
+    width: 100%;
+    height: 553px;
     position: absolute;
 }
 
 .form-style {
-    margin-left: 100px;
+    margin-left: 75px;
 }
 
 .input-style {
-    width: 340px;
+    background-color: #F0EBE3;
+    width: 300px;
     height: 50px;
     border-radius: 25px;
     margin: 10px;
@@ -35,13 +36,14 @@
 
 
 .input-style-messge {
-    width: 680px;
+    background-color: #F0EBE3;
+    width: 650px;
     height: 150px;
     border-radius: 25px;
     margin: 10px;
     border: none;
     padding: 20px;
-     font-family: 'lora';
+    font-family: 'lora';
     font-size: 14px;
     color: #255f5f;
 
@@ -56,10 +58,11 @@
     color: #ECD8B6;
     border-radius: 5px;
     font-family: 'lora';
-    font-weight:bold;
+    font-weight: bold;
+    margin-bottom: 40px;
 }
 
-.submit-btn:hover{
+.submit-btn:hover {
     background-color: #ECD8B6;
     color: #099588;
 }
@@ -104,23 +107,24 @@
 }
 
 .copy-rights-reserved-text {
-    margin-right: 15px;
+    margin-top: 10px;
+    margin-right: 35px;
 }
 
 .form-head {
-    font-family: 'Playfair Display';    
+    font-family: 'Playfair Display';
     font-size: 40px;
     color: #ECD8B6;
     font-weight: bold;
 }
 
 .form-sub-head {
-    font-family: 'Lora',serif !important;
+    font-family: 'Lora', serif !important;
     font-style: italic;
     font-size: 24px;
     color: #ECD8B6;
     font-weight: medium;
-    margin-left: 100px;
+    margin-left: 88px;
 }
 
 /* Location-side  */
@@ -162,22 +166,24 @@
 
 
 /* Copy rights section  */
-.copy-rights-reserved-head{
+.copy-rights-reserved-head {
     font-family: 'lora';
     font-size: 15px;
     color: #255f5f;
     position: relative;
-left: 100% !important;
+    top: 35%;
+    margin-bottom: 5%;
+    left: 100% !important;
 }
 
-.copy-rights-reserved{
+.copy-rights-reserved {
     /* float: right; */
     font-family: 'lora';
     font-size: 15px;
     color: #255f5f;
 }
 
-.footer-copy-rights-reserved{
+.footer-copy-rights-reserved {
     display: flex;
     justify-content: space-between;
     /* align-items: center; */
